--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,9 +5,9 @@
         <%- include("./partials/nav.ejs") %>
 
         <div class="about content">
-            <h2>ABOUT US</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia quibusdam quaerat illo a modi tenetur ut blanditiis, illum quo consectetur recusandae excepturi natus impedit rem, tempora cum fuga quae in.</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia quibusdam quaerat illo a modi tenetur ut blanditiis, illum quo consectetur recusandae excepturi natus impedit rem, tempora cum fuga quae in.</p>
+            <h2>ABOUT THE APP</h2>
+            <p>This is a simple blog app which navigates through three basic pages: BLOGS, ABOUT and NEW BLOG.</p>
+            <p>The Blogs page contains all the blogs created displayed as a list. It consists of a delete icon which has the functionality of deleting each blog. Each blog has a title, snippet and the blog body. The About page displays about the app in general. This brief description about the app is in the About page. The New blog page is to create a new blog as the name suggests. It consists of a form which takes the user's input for creating the blog. The form is a simple urlencoded type. We can implement a multipart formdata in its later stage for which we use the multer library for accepting images and other files as input. </p>
 
         </div>
         <%- include("./partials/footer.ejs") %>
