--- a/public/style.css
+++ b/public/style.css
@@ -6,7 +6,7 @@
 }
 body{
     font-family: 'Noto Serif', serif;
-    background: #ffffff;
+    background: #fff;
 }
 
 p, h1, h2, h3, a, ul{
@@ -25,7 +25,7 @@ ul{
 }
 
 nav{
-    height: 12vh;
+    height: 15vh;
     background: #030036;
     border-bottom: 0.5px solid #f8f7f7;
     margin-bottom: 60px;
@@ -109,6 +109,7 @@ footer{
     font-size: 1.2em;
     cursor: pointer;
   }
+
   
 
 
