--- a/public/style.css
+++ b/public/style.css
@@ -61,7 +61,7 @@ footer{
     margin-bottom: 40px;
   }
   h3{
-    color: #ffffff;
+    color: #030036;
     text-transform: capitalize;
     margin-bottom: 8px;
   }
@@ -70,15 +70,17 @@ footer{
   }
 
 /* index styles */
+
 .blogs a{
+  /* background-color: #030036; */
     display: block;
     margin: 40px 0;
     padding-left: 30px;
-    border-left: 10px solid rgb(20, 197, 220);
+    border-left: 1rem ridge rgb(20, 197, 220);
 }
 
 .blogs a:hover h3{
-    color: crimson;
+    color: #595681;
 }
 
 /* create styles */
@@ -93,6 +95,7 @@ footer{
     margin: 10px 0;
     padding: 8px;
   }
+
   .create-blog label{
     display: block;
     margin-top: 24px;
@@ -100,15 +103,24 @@ footer{
   textarea{
     height: 120px;
   }
+
+  textarea:hover{
+    background-color: rgb(228, 228, 228);
+  }
+
   .create-blog button{
     margin-top: 20px;
-    background: rgb(20, 130, 220);
+    background: rgb(34, 145, 236);
     color: white;
-    padding: 6px;
+    padding: 9px;
     border: 0;
     border-radius: 5px;
-    font-size: 1.2em;
+    font-size: 1.5em;
     cursor: pointer;
+  }
+
+  .create-blog button:hover {
+    background: rgb(0, 121, 219);
   }
 
   
@@ -174,71 +186,6 @@ footer{
 }
 
 
- /* body{
-    max-width: 1200px;
-    margin: 20px auto;
-    padding: 0 20px;
-    font-family: 'Noto Serif', serif;
-    max-width: 1200px;
-  }
-  p, h1, h2, h3, a, ul{
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    color: #222;
-  }
-
-  /* nav & footer styles */
-  /*nav{
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 60px;
-    padding-bottom: 10px;
-    border-bottom: 1px solid #ddd;
-    text-transform: uppercase;
-  }
-  nav ul{
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-  }
-  nav li{
-    list-style-type: none;
-    margin-left: 20px;
-  }
-  nav h1{
-    font-size: 3em;
-  }
-  nav p, nav a{
-    color: #777;
-    font-weight: 300;
-  }
-  footer{
-    color: #777;
-    text-align: center;
-    margin: 80px auto 20px;
-  }
-  h2{
-    margin-bottom: 40px;
-  }
-  h3{
-    text-transform: capitalize;
-    margin-bottom: 8px;
-  }
-  .content{
-    margin-left: 20px;
-  }
-
-  /* index styles */
- /* .blogs a{
-    display: block;
-    margin: 40px 0;
-    padding-left: 30px;
-    border-left: 6px solid crimson;
-  }
-  .blogs a:hover h3{
-    color: crimson;
-  }
 
   /* details styles */
   .details{
@@ -247,40 +194,12 @@ footer{
   .delete{
     position: absolute;
     top: 0;
-    right: 0;
+    right: 3%;
     border-radius: 50%;
-    padding: 8px;
+    padding: 10px;
   }
   .delete:hover{
     cursor: pointer;
-    box-shadow: 1px 2px 3px rgba(0,0,0,0.2);
+    box-shadow: 0 0 0 0.2em #ff0000;
   }
 
-  /* create styles */
-  /*.create-blog form{
-    max-width: 400px;
-    margin: 0 auto;
-  }
-  .create-blog input,
-  .create-blog textarea{
-    display: block;
-    width: 100%;
-    margin: 10px 0;
-    padding: 8px;
-  }
-  .create-blog label{
-    display: block;
-    margin-top: 24px;
-  }
-  textarea{
-    height: 120px;
-  }
-  .create-blog button{
-    margin-top: 20px;
-    background: crimson;
-    color: white;
-    padding: 6px;
-    border: 0;
-    font-size: 1.2em;
-    cursor: pointer;
-  } */
